# Voro

./: .env.prod.example  .gitignore  CLAUDE.md  Conclusion.md  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
ai-server/: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
ai-server/alembic/: env.py
ai-server/alembic/versions/: 2ff7ace572f3_init_schema.py
ai-server/app/: config.py  main.py
ai-server/app/agents/: generator.py  ingestion.py  validator.py
ai-server/app/api/: routes.py  schemas.py
ai-server/app/db/: models.py  session.py
ai-server/app/llm/: claude.py  voyage.py
ai-server/app/services/: chunking.py
ai-server/tests/: test_chunking.py  test_config.py
backend/: .env.example  Dockerfile  README.md  go.mod  go.sum  railway.toml
backend/cmd/server/: main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/domain/: alarm.go  attempt.go  class.go  exam.go  note.go  place.go  quiz.go  setup.go  user.go
backend/internal/e2e/: api_test.go
backend/internal/handler/: alarm_handler.go  attempt_handler.go  auth_handler.go  class_handler.go  exam_handler.go  (+6 more)
docs/: architecture-review.md
frontend/: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: voro_1.lottie  voro_2.lottie  voro_3.lottie
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
infra/: .env.example  .env.prod.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/nginx/: nginx.conf
(+174 files in other folders)
