[project]
name = "voro-ai-server"
version = "0.1.0"
description = "Voro AI server: ingestion, quiz generation, and validation agents."
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.5",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "anthropic>=0.39",
    "voyageai>=0.3",
    "pypdf>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI intentionally uses Depends/Form/File in argument defaults
